# PicoBase

./: CMakeLists.txt  README.md  main.c
App/: CMakeLists.txt
App/CLI/: CMakeLists.txt  cli.c  cli.h
App/MODBUS/: CMakeLists.txt  mb_crc.c  mb_crc.h  mb_func_proc.c  mb_func_proc.h  mb_node.c  mb_node.h  mb_rpi_mapping.c  mb_rpi_mapping.h
Tools/reflasher/: reflash_all.py
Utils/: CMakeLists.txt
Utils/DevInfo/: CMakeLists.txt  devinfo.c  devinfo.h
Utils/Heartbeat/: CMakeLists.txt  heartbeat.c  heartbeat.h
